--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "AddData",
+  "name": "AddWebData",
+  "label": "Add Web Data",
   "platform": "HTML",
-  "version": "2.1",
+  "version": "0.1",
   "wabVersion": "2.1",
   "author": "Esri",
   "description": "",
